--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,3 +6,5 @@
 @import 'footer-box.scss';
 @import 'about-nav.scss';
 @import 'about.scss';
+@import 'clients.scss';
+@import 'about-footer-box.scss';
