--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -5,6 +5,9 @@ nav{
     align-items: center;
     background-color: black;
     
+    span {
+        color: #79addc;
+    }
     
     .nav-holder{
         position: absolute;
@@ -25,10 +28,10 @@ nav{
             .logotravel{
                 width: 95px;
                 height: 42px;
-                
-                border-color: white;
-                border-style: solid;
-                border-width: 1px;
+                background-image: url(../images/logo-white.png);
+                //border-color: white;
+                //border-style: solid;
+                //border-width: 1px;
                 
 
             }
@@ -46,7 +49,7 @@ nav{
             a{
                 margin-left: 25px;
                 color: white;
-                font-size: 14px;
+                font-size: 17px;
                 text-decoration: none;
                 font-family: 'Gill Sans';
             }
